Updated api yaml and regenerated code so put requests can put objects and post requests return objects to api callers can get the ids and then modify their respective resources
